Correción de estrucutra DB
