# models/tipoSistema.go
@@ -10,51 +10,45 @@ import (
 	"github.com/astaxie/beego/orm"
 )
 
-type HojaHistoria struct {
-	Id              int              `orm:"column(id_hoja_historia);pk;auto"`
-	HistoriaClinica *HistoriaClinica `orm:"column(id_historia_clinica);rel(fk);null"`
-	Diagnostico     *Diagnostico     `orm:"column(id_diagnostico);rel(fk);null"` //Validar
-	FechaConsulta   *time.Time       `orm:"column(fecha_consulta);type(timestamp without time zone);null"`
-	Motivo          string           `orm:"column(motivo);null"`
-	Observacion     string           `orm:"column(observacion);null"`
-	Evolucion       string           `orm:"column(evolucion);type(json);null"`
-	Especialidad    int              `orm:"column(id_especialidad);type(bigint);null"`
-	Profesional     float64          `orm:"column(id_profesional);type(bigint);null"`
-	Persona         float64          `orm:"column(id_persona);type(bigint);null"`
+type TipoSistema struct {
+	Id                int        `orm:"column(id_tipo_sistema);pk;auto"`
+	Nombre            string     `orm:"column(nombre);null"`
+	Activo            bool       `orm:"column(activo);null"`
+	FechaModificacion *time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone);null"`
 }
 
-func (t *HojaHistoria) TableName() string {
-	return "hojahistoria"
+func (p *TipoSistema) TableName() string {
+	return "TipoSistema"
 }
 func init() {
-	orm.RegisterModel(new(HojaHistoria))
+	orm.RegisterModel(new(TipoSistema))
 }
 
-// AddHojaHistoria inserta un registro en la tabla hojahistoria
+// AddTipoSistema inserta un registro en la tabla TipoSistema
 // Último registro insertado con éxito
-func AddHojaHistoria(m *HojaHistoria) (id int64, err error) {
+func AddTipoSistema(m *TipoSistema) (id int64, err error) {
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
 }
 
-// GetHojaHistoriaById obtiene un registro de la tabla hojahistoria por su id
+// GetTipoSistemaById obtiene un registro de la tabla TipoSistema por su id
 // Id no existe
-func GetHojaHistoriaById(id int) (v *HojaHistoria, err error) {
+func GetTipoSistemaById(id int) (v *TipoSistema, err error) {
 	o := orm.NewOrm()
-	v = &HojaHistoria{Id: id}
+	v = &TipoSistema{Id: id}
 	if err = o.Read(v); err == nil {
 		return v, nil
 	}
 	return nil, err
 }
 
-// GetAllHojaHistoria obtiene todos los registros de la tabla hojahistoria
+// GetAllTipoSistema obtiene todos los registros de la tabla TipoSistema
 // No existen registros
-func GetAllHojaHistoria(query map[string]string, fields []string, sortby []string, order []string,
+func GetAllTipoSistema(query map[string]string, fields []string, sortby []string, order []string,
 	offset int64, limit int64) (ml []interface{}, err error) {
 	o := orm.NewOrm()
-	qs := o.QueryTable(new(HojaHistoria))
+	qs := o.QueryTable(new(TipoSistema))
 	for k, v := range query {
 		k = strings.Replace(k, ".", "__", -1)
 		if strings.Contains(k, "isnull") {
@@ -98,7 +92,7 @@ func GetAllHojaHistoria(query map[string]string, fields []string, sortby []strin
 			return nil, errors.New("error: campos de 'order' no utilizados")
 		}
 	}
-	var l []HojaHistoria
+	var l []TipoSistema
 	qs = qs.OrderBy(sortFields...)
 	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
 		if len(fields) == 0 {
@@ -120,28 +114,28 @@ func GetAllHojaHistoria(query map[string]string, fields []string, sortby []strin
 	return nil, err
 }
 
-// UpdateHojaHistoria actualiza un registro de la tabla hojahistoria
+// UpdateTipoSistema actualiza un registro de la tabla TipoSistema
 // El registro a actualizar no existe
-func UpdateHojaHistoria(m *HojaHistoria) (err error) {
+func UpdateTipoSistema(m *TipoSistema) (err error) {
 	o := orm.NewOrm()
-	v := HojaHistoria{Id: m.Id}
+	v := TipoSistema{Id: m.Id}
 	if err = o.Read(&v); err == nil {
 		var num int64
 		if num, err = o.Update(m); err == nil {
-			fmt.Println("Número de registros actualizados de la base de datos:", num)
+			fmt.Println("Numero de registros actualizados:", num)
 		}
 	}
 	return
 }
 
-// DeleteHojaHistoria elimina un registro de la tabla
+// DeleteTipoSistema elimina un registro de la tabla TipoSistema
 // El registro a eliminar no existe
-func DeleteHojaHistoria(id int) (err error) {
+func DeleteTipoSistema(id int) (err error) {
 	o := orm.NewOrm()
-	v := HojaHistoria{Id: id}
+	v := TipoSistema{Id: id}
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Delete(&HojaHistoria{Id: id}); err == nil {
+		if num, err = o.Delete(&TipoSistema{Id: id}); err == nil {
 			fmt.Println("Numero de registros eliminados:", num)
 		}
 	}
